--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ header {
 }
 
 .index-heading-section h1 {
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-size: 84px;
     color: black;
 }
